<resources>
    <string name="app_name">currencyexChange</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Currency Exchange</string>
    <string name="nav_header_subtitle">Dein Gefühl für Geld!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Currency Exchange</string>
    <string name="menu_info">Info</string>
    <string name="number_one">number one</string>
    <string name="number_two">number two</string>
    <string name="home_text1">Der aktuelle Wechselkurs beträgt</string>
    <string name="button_to_submit">Button to submit</string>
    <string name="info">info</string>
    <string name="doener">"Gib erst einen Wert zum Umrechnen ein! Dann wirst du erfahren, wie viele Döner es Wert ist!"</string>
    <string name="aboutUs_body">"Wir sind ein kleines Entwicklerteam von der HWR-Berlin. Im Zuge eines Moduls, unseres Studiums, haben wir diese App entwickelt und unser Wissen so im Software Engineering vertieft."</string>
    <string name="aboutUs">About us!</string>
    <string name="nutzung_body">"Wähle eine beliebige Währung im Dropdown Menü aus und gebe dann eine Zahl ein. Lasse dir nun dein Ergebnis berechnen durch einen Klick auf den Pfeil. Durch einen Berührung auf den Kreis mit den Pfeilen können die zwei ausgewählten Währungen getauscht werden."</string>
    <string name="nutzung">Nutzung</string>
    <string name="data_body">"Wir erheben unsere Daten mittels eines Webscrapers, der auf die Seite https://www.waehrungsrechner.de/wechselkurse/  zugreift und die Daten strukturiert."</string>
    <string name="data">Daten</string>
</resources>